fix: update the alignment in reference title (#628)

--- a/src/components/section/ReferencedSection/referencedSectionTitle.module.css
+++ b/src/components/section/ReferencedSection/referencedSectionTitle.module.css
@@ -62,7 +62,7 @@
 			align-items: start;
 		}
 
-		&[data-index='4']&[data-context='Phil Direct'] {
+		&[section-index='5']&[data-context='Phil Direct'] {
 			align-items: flex-start;
 		}
 	}
